# example-python-proj

./: README.md  pyproject.toml  setup.cfg  tox.ini
example_python_proj/: __init__.py  add.py  my_print.py
tests/: test_add.py
