[metadata]
name = example-python-proj
version = 0.0.1
author = Ryan Singman
author_email = ryanjs@vt.edu
description = Just an example
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryansingman/example-python-proj
project_urls = 
    Issue Tracker = https://github.com/ryansingman/example-python-proj/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=2.7
install_requires =

[flake8]
max-line-length = 100
per-file-ignores = __init__.py:F401

